
[project]
name="doc-utils"
authors = [
    {name = "Francesco Bellini", email = "doc.open.dev@gmail.com"}
]
version="0.0.1"
description="Useful tool for Doc to use"
keywords=["promtpt", "save", "history"]
requires-python=">=3.8"
classifiers = [
]
dependencies = [
]


[project.urls]
Repository = "https://github.com/doc-packages/comfyui-doc-utils"

[tool.comfy]
PublisherId = "doc"
DisplayName = "doc-utils"
Icon = ""